[package]
name = "rate-limiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4",  features = ["headers"] }
tower = { version = "0.4.13", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.8"
pin-project = "1.1.3"
